spacing issue fixed

--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,11 @@ h1,h2,h3,h4,h5,h6{
 
 
 }
+@media screen and (min-width: 768px) {
+  .video-play {
+    top: 35%;
+}
+}
 
 
   .get-started-btn:hover button{
